@@ -1,5 +1,10 @@
 2014-03-12  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-oem/: Support Supermicro get-power-supply-status
+	and get-pmbus-power-supply-status commands.
+	
+2014-03-12  Albert Chu <chu11@llnl.gov>
+
 	* doc/freeipmi-faq.texi: Add notes on ipmi-detect for IPMI
 	discovery.
 	
